--- a/app/views/index_helper/_index.html.erb
+++ b/app/views/index_helper/_index.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="index-navigation-bottom">
     <div class="index-buttons">
-      <%= link_to "New #{builder.model.model_name.singular}", [:new].merge(builder.model)  %>
+      <%= link_to "New #{builder.model.last.model_name.singular}", [:new].merge(builder.model)  %>
     </div>
     <% unless options[:pagination] == false %>
       <div class="index-pager">
