--- a/app/views/index_helper/_index.html.erb
+++ b/app/views/index_helper/_index.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="index-navigation-bottom">
     <div class="index-buttons">
-      <%= link_to "New #{builder.model.last.model_name}", [:new] + (builder.model.first(builder.model.length - 1) << builder.model.last.model_name.singularize.underscore) %>
+      <%= link_to "New #{builder.model.last.model_name}", polymorphic_path([:new, builder.model.map { |m| m.model_name }].flatten) %>
     </div>
     <% unless options[:pagination] == false %>
       <div class="index-pager">
