--- a/app/views/index_helper/_index.html.erb
+++ b/app/views/index_helper/_index.html.erb
@@ -39,7 +39,9 @@
   </div>
   <div class="index-navigation-bottom">
     <div class="index-buttons">
-      <%= link_to "New #{builder.model.last.model_name}", polymorphic_path([:new, builder.model].flatten) %>
+      <% builder.buttons.each do |button| %>
+        <%= button %>
+      <% end %>
     </div>
     <% unless options[:pagination] == false %>
       <div class="index-pager">
