--- a/app/views/index_helper/_index.html.erb
+++ b/app/views/index_helper/_index.html.erb
@@ -40,7 +40,7 @@
   <div class="index-navigation-bottom">
     <div class="index-buttons">
       <% builder.buttons.each do |button| %>
-        <%= button.yield %>
+        <%= capture(button) %>
       <% end %>
     </div>
     <% unless options[:pagination] == false %>
